Modernisation and cleanup (#3)
* Cleanup
* Trying to make github actions happy
* Exchange log4j with logback
* Update version to 2.0.0-SNAPSHOT
* Remove old sub-modules
* Add Jackson support to SemiSpace
* Update jdk
* Introduce mvn wrapper, update dependencies slightly, modernise
* Remove XStream. It is a dead project now anyway
* Modernize site building
* Prepare pom to release new version